--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 
 <body>
     
+    <p id="demo"></p>
+    <script>
+        let x, y;
+        var z;
+        x = 10;
+        y = 25.75;
+        z = x + y;
+    </script>
+
 </body>
 </html>
