--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         x = 10;
         y = 25.75;
         z = x + y;
+        document.getElementById("demo").innerHTML = "Raspunsul este z = " + z +" ."
     </script>
 
 </body>
